# beeplayer

./: .gitignore  Beeplayer.cpp  CMakeLists.txt  LICENSE  README.md  app_icon.rc  beeplayer.cpp  src_beeplayer.cpp
AudioList/: AudioList.cpp  AudioList.hpp
AudioPlayer/: AudioPlayer.cpp  AudioPlayer.hpp
Engine/: AudioDecoder.cpp  AudioDecoder.hpp  AudioDevice.cpp  AudioDevice.hpp  Buffering.cpp  Buffering.hpp  Controller.cpp  Controller.hpp  DataCallback.cpp  DataCallback.hpp  Decoder.cpp  Decoder.hpp  Device.cpp  Device.hpp  MusicPlayerState.cpp  MusicPlayerState.hpp  Player.cpp  Player.hpp  Status.cpp  Status.hpp
FileSystem/: Encoding.cpp  Encoding.hpp  Metadata.cpp  Metadata.hpp  Path.cpp  Path.hpp
FileSystem/taglib/lib/pkgconfig/: taglib.pc  taglib_c.pc
GUI/: GUI.cpp  UI.cpp  UI.hpp
GUI/icon/: Beeplayer.h
Log/: LogSystem.cpp  LogSystem.hpp
PlayerController/: PlayerController.cpp  PlayerController.hpp
PreBuild/: README.md
Resource/: Resource.qrc
Resource/API/: Beeplayer API.md
Resource/UML/: BeeplayerUML.mdj
Resource/style/: style.css
Test/: u8towchar_loader.cpp  wchar_loader.cpp
UI/: beeplayerui.cpp  beeplayerui.h  beeplayerui.ui  progresswidget.cpp  progresswidget.h  volumeslider.cpp  volumeslider.h
UI/Animations/: rotatingalbumart.cpp  rotatingalbumart.h  scrolllabel.cpp  scrolllabel.h
